# file_tree

./: .gitignore  LICENSE  README.md  build_ext.py  check.py  make_wheel.py  pyproject.toml  requirements.txt
INFO/: METADATA
include/: file_tree.pyi
make/: file_tree.cp310-win_amd64.pyd
src/: file_tree.pyx
wheel/: file_tree-1.0.0-cp310-cp310-win_amd64.whl  file_tree-1.0.1-cp310-cp310-win_amd64.whl
